<resources>
    <string name="app_name">Nazdravje</string>
    <string name="title_home">Home</string>
    <string name="title_addNew">Add</string>
    <string name="title_settings">Settings</string>
    <string name="lorem" translatable="false">Love delicious, crunchy chicken that is bursting with flavor, crispy when you bite into it, and tender and juicy inside? This recipe delivers big time - with a super-simple method to get addictive tastes-like-fried chicken, with a fraction of the oil (or work!)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login with</string>
    <!--    <string name="default_web_client_id" translatable="false">627965274843-k7v744n0rgidqmtu2gdfc7lbnlroeiam.apps.googleusercontent.com</string>-->
    <string name="login_button">Login</string>
    <string name="login_google" translatable="false">Google</string>
    <string name="login_facebook" translatable="false">Facebook</string>
    <string name="login_guest" translatable="false">Guest</string>
    <string name="loc_en" translatable="false">EN</string>
    <string name="loc_mk" translatable="false">MK</string>
    <string name="select_lang">Select Language</string>
    <string name="chooselogin">or</string>
    <string name="description">Enter Recipe Description</string>
    <string name="recipetitle">Enter Recipe Title</string>
    <string name="ingredients">Enter Recipe Ingredients</string>
    <string name="addnewtitle">Add New Recipe</string>
    <string name="remember_me">Remember Me</string>
    <string name="title_favorites">Favorites</string>
    <string name="facebook_app_id" translatable="false">3407072229554540</string>
    <string name="authorName" translatable="false">Naile Emini</string>


</resources>